--- a/blocks/element/__icon/element__icon.css
+++ b/blocks/element/__icon/element__icon.css
@@ -1,3 +1,25 @@
 .element__icon {
-  margin-right: 30px;
+  border: none;
+  transform: translateY(-10px);
+  margin: 32px 21px 0 0;
+  background-image: url(../../../vendor/images/heart-icon-white.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 22px;
+  height: 19px;
+  }
+  .element__icon:hover {
+    cursor: pointer;
+    opacity: 0.6;
+  }
+
+  .element__icon:active {
+    opacity: 1;
+    background-image: url(../../../vendor/images/heart-icon-dark.png);
+  }
+
+  @media screen and (max-width: 599px) {
+    .element__icon {
+      transform: translateY(-5px);
+    }
   }
