--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,10 +1,11 @@
 .element__title {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  max-width: 246px;
-  margin: 25px 0 32px 21px;
+  max-width: 208px;
+  margin: 20px 0 32px 21px;
   color: #000;
   font-weight: 900;
   font-size: 24px;
   line-height: 1.2;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
