--- a/blocks/elements/__container/elements__container.css
+++ b/blocks/elements/__container/elements__container.css
@@ -6,3 +6,17 @@
   column-gap: 17px;
   row-gap: 20px;
 }
+
+@media screen and (max-width: 899px) {
+  .elements__container {
+    max-width: 577px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 599px) {
+  .elements__container {
+    max-width: 282px;
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
