--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,3 +2,10 @@
   max-width: 880px;
   margin: 45px auto 40px;
 }
+
+
+@media screen and (max-width: 899px) {
+  .header {
+    margin: 28px auto 42px;
+  }
+}
