--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -7,6 +7,7 @@
 
 @media screen and (max-width: 899px) {
   .profile__text {
+    padding-left: 15px;
     font-size: 14px;
     line-height: 1.21;
   }
