--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -3,7 +3,7 @@
   font-size: 42px;
   line-height: 1.14;
   max-width: 294px;
-  margin: 0 18px 16px 0;
+  margin: 16px 18px 10px 0;
 }
 
 
@@ -12,5 +12,6 @@
   .profile__title {
     font-size: 27px;
     line-height: 1.22;
+    margin: 0 10px 14px 0;
   }
 }
