--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,12 +1,15 @@
 .profile {
+  display: flex;
+  flex-wrap: wrap;
   margin: 0 auto 50px;
   max-width: 880px;
-  display: flex;
 }
 
 @media screen and (max-width: 899px) {
   .profile {
+    margin: 0 auto 36px;
     align-items: center;
     flex-direction: column;
   }
 }
+
