--- a/blocks/element/__wrapper/element__wrapper.css
+++ b/blocks/element/__wrapper/element__wrapper.css
@@ -1,4 +1,4 @@
-.elements__container {
+.element__wrapper {
   margin: 0 auto;
   max-width: 880px;
   display: grid;
@@ -8,14 +8,14 @@
 }
 
 @media screen and (max-width: 899px) {
-  .elements__container {
+  .element__wrapper {
     max-width: 577px;
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media screen and (max-width: 599px) {
-  .elements__container {
+  .element__wrapper {
     max-width: 282px;
     grid-template-columns: repeat(1, 1fr);
   }
