--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,10 @@
 .header {
   max-width: 880px;
   margin: 45px auto 40px;
+  opacity: 0.7;
+  border-bottom: 1px solid #545454;
+  margin-top: 41px;
 }
-
 
 @media screen and (max-width: 899px) {
   .header {
