--- a/blocks/popup/__edit-profile/popup__edit-profile.css
+++ b/blocks/popup/__edit-profile/popup__edit-profile.css
@@ -1,17 +1,18 @@
 .popup__edit-profile {
+  padding-top: 34px;
   color: black;
   font-weight: 900;
   font-family: inherit;
   font-size: 24px;
   line-height: 1.2;
-  margin: 34px 64px 54px 0;
-  width: 330px;
+  margin: 0;
+  max-width: 330px;
 }
 
 @media screen and (max-width: 599px) {
   .popup__edit-profile {
+  padding-top: 25px;
   font-size: 18px;
-  margin: 25px 0 75px;
   max-width: 238px;
   }
 }
