--- a/blocks/popup/__form-input/popup__form-input.css
+++ b/blocks/popup/__form-input/popup__form-input.css
@@ -1,13 +1,16 @@
 .popup__form-input {
   border: none;
   border-bottom: 1px solid #000;
+  border-color: rgba(0, 0, 0, 0.2);
   font-family: inherit;
   font-size: 14px;
   line-height: 1.2;
   padding: 0 0 13px 0;
-  margin-bottom: 30px;
-  width: 382px;
+  margin: 54px auto 30px;
+  width: 358px;
 }
+.popup__form-input::-moz-placeholder { color: #000; }
+.popup__form-input::-webkit-input-placeholder { color: #000; }
 
 .popup__form-input:last-of-type {
   margin: 0;
@@ -15,6 +18,7 @@
 
 @media screen and (max-width: 599px) {
   .popup__form-input {
+  margin: 75px auto 30px;
   max-width: 238px;
   }
 }
