--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,7 +1,5 @@
 .popup__form {
-  padding: 0 23px;
-  position: relative;
-  max-width: 384px;
+  padding-left: 36px;
   background-color: white;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px 10px;
@@ -10,6 +8,6 @@
 
 @media screen and (max-width: 599px) {
   .popup__form {
-   max-width: 236px;
+  padding-left: 22px;
   }
 }
