--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -4,14 +4,18 @@
   line-height: 1.14;
   max-width: 294px;
   margin: 16px 18px 10px 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 
 
 @media screen and (max-width: 899px) {
   .profile__title {
+    max-width: 189px;
     font-size: 27px;
     line-height: 1.22;
-    margin: 0 10px 14px 0;
+    margin: 0 10px 5px 0;
   }
 }
