--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,6 +1,6 @@
 .popup__container {
   max-width: 430px;
-  position: relative;;
+  position: relative;
 }
 
 @media screen and (max-width: 599px) {
