--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,7 @@
 .header {
   max-width: 880px;
   margin: 45px auto 40px;
-  opacity: 0.7;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   margin-top: 41px;
 }
 
