--- a/pages/index.css
+++ b/pages/index.css
@@ -19,12 +19,15 @@
 
 /* Element */
 @import url(../blocks/element/element.css);
+@import url(../blocks/element/__lists/element__lists.css);
 @import url(../blocks/element/__wrapper/element__wrapper.css);
 @import url(../blocks/element/__container/element__container.css);
 @import url(../blocks/element/__wrap/element__wrap.css);
 @import url(../blocks/element/__icon/element__icon.css);
+@import url(../blocks/element/__icon/_active/element__icon_active.css);
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__text/element__text.css);
+@import url(../blocks/element/__trash/element__trash-icon.css);
 
 /* Footer */
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -39,6 +42,8 @@
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup-image/popup-image.css);
+@import url(../blocks/popup-image/__container/popup-image__container.css);
 
 
 
