--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,8 +1,8 @@
 .popup__close-button {
   background: none;
   position: absolute;
-  bottom: 345px;
-  left: 438px;
+  top: -40px;
+  right: -40px;
   background-image: url(../../../vendor/images/popup-close-button.png);
   box-sizing: border-box;
   background-position: center;
@@ -19,8 +19,8 @@
 
 @media screen and (max-width: 599px) {
   .popup__close-button {
-    left: 261px;
-    bottom: 341px;
+    right: 0;
+    top: -36px;
     width: 20px;
     height: 20px;
   }
