--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,13 +1,4 @@
 .popup_opened {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 5;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-  background-color: rgba(0, 0, 0, 0.5);
+  visibility: visible;
+  opacity: 1;
 }
