--- a/pages/index.css
+++ b/pages/index.css
@@ -43,7 +43,11 @@
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup-image/popup-image.css);
+/* popup-image */
+@import url(../blocks/popup-image/popup-image.css);
 @import url(../blocks/popup-image/__container/popup-image__container.css);
+@import url(../blocks/popup-image/__card/popup-image__card.css);
+@import url(../blocks/popup-image/__zoom/popup-image__zoom.css);
 
 
 
