--- a/blocks/popup/__form-input/popup__form-input.css
+++ b/blocks/popup/__form-input/popup__form-input.css
@@ -6,20 +6,13 @@
   font-size: 14px;
   line-height: 1.2;
   padding: 0 0 13px 0;
-  margin: 54px auto 30px;
-  width: 358px;
 }
-
+.popup__form-input:invalid {
+  border-bottom: 1px solid red;
+}
 .popup__form-input::-moz-placeholder { color: #000; }
 .popup__form-input::-webkit-input-placeholder { color: #000; }
 
 .popup__form-input:last-of-type {
   margin: 0;
-}
-
-@media screen and (max-width: 599px) {
-  .popup__form-input {
-  margin: 75px auto 30px;
-  max-width: 238px;
-  }
 }
