--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,5 +1,5 @@
 .popup__form {
-  padding-left: 36px;
+  padding: 0 36px 0;
   background-color: white;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px 10px;
