--- a/blocks/popup/__form-input/popup__form-input.css
+++ b/blocks/popup/__form-input/popup__form-input.css
@@ -7,11 +7,8 @@
   line-height: 1.2;
   padding: 0 0 13px 0;
 }
-.popup__form-input:invalid {
-  border-bottom: 1px solid red;
-}
-.popup__form-input::-moz-placeholder { color: #000; }
-.popup__form-input::-webkit-input-placeholder { color: #000; }
+.popup__form-input::-moz-placeholder {color: #C4C4C4; }
+.popup__form-input::-webkit-input-placeholder { color: #C4C4C4; }
 
 .popup__form-input:last-of-type {
   margin: 0;
