feat:Сборка проекта Webpackom

--- a/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -4,7 +4,7 @@
   border-radius: 2px;
   box-sizing: border-box;
   padding: 7px;
-  background-image: url(../../../vendor/images/edit-button.png);
+  background-image: url(../../../images/edit-button.png);
   background-position: center;
   background-repeat: no-repeat;
   background-color: black;
