--- a/src/blocks/profile/__add-button/profile__add-button.css
+++ b/src/blocks/profile/__add-button/profile__add-button.css
@@ -3,7 +3,7 @@
   border-radius: 2px;
   box-sizing: border-box;
   padding: 23px 73px;
-  background-image: url(../../../vendor/images/add-button.png);
+  background-image: url(../../../images/add-button.png);
   background-position: center;
   background-repeat: no-repeat;
   background-color: black;
