--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -16,6 +16,7 @@
 @import url(../blocks/profile/__text/profile__text.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile/__avatar-btn/profile__avatar-btn.css);
 
 /* Element */
 @import url(../blocks/element/element.css);
@@ -39,6 +40,7 @@
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__form-field/popup__form-field.css);
 @import url(../blocks/popup/__edit-profile/popup__edit-profile.css);
+@import url(../blocks/popup/__edit-profile/_avatar/popup__edit-profile_avatar.css);
 @import url(../blocks/popup/__form-input/popup__form-input.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
