--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -29,6 +29,8 @@
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__text/element__text.css);
 @import url(../blocks/element/__trash/element__trash-icon.css);
+@import url(../blocks/element/__like-container/element__like-container.css);
+@import url(../blocks/element/__like-counter/element__like-counter.css);
 
 /* Footer */
 @import url(../blocks/footer/__copyright/footer__copyright.css);
