--- a/main.css
+++ b/main.css
@@ -85,7 +85,7 @@
 /*!*********************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/element/__icon/element__icon.css ***!
   \*********************************************************************************************************************************************************************/
-.element__icon{background-color:transparent;background-image:url(images/heart-icon-white.9904be1205f0bc23394e.png);background-position:50%;background-repeat:no-repeat;border:none;height:19px;margin:32px 21px 0 0;transform:translateY(-10px);width:22px}.element__icon:hover{cursor:pointer;opacity:.5}@media screen and (max-width:599px){.element__icon{transform:translateY(-5px)}}
+.element__icon{align-self:start;background-image:url(images/heart-icon-white.9904be1205f0bc23394e.png);background-repeat:no-repeat;border:none;height:19px;margin-bottom:3px;width:22px}.element__icon:hover{cursor:pointer;opacity:.5}
 /*!************************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/element/__icon/_active/element__icon_active.css ***!
   \************************************************************************************************************************************************************************************/
@@ -102,6 +102,14 @@
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/element/__trash/element__trash-icon.css ***!
   \****************************************************************************************************************************************************************************/
 .element__trash-icon{background-color:transparent;background-image:url(images/element-trash-icon.ce3b64935accf9b8212e.svg);background-position:50%;background-repeat:no-repeat;border:0;cursor:pointer;height:19px;position:absolute;right:20px;top:20px;width:18px;z-index:2}
+/*!*****************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/element/__like-container/element__like-container.css ***!
+  \*****************************************************************************************************************************************************************************************/
+.element__like-container{align-items:center;display:flex;flex-direction:column;justify-content:center;margin:0 20px 0 0;padding:0}
+/*!*************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/element/__like-counter/element__like-counter.css ***!
+  \*************************************************************************************************************************************************************************************/
+.element__like-counter{color:#000;display:flex;font-size:13px;justify-content:center;line-height:16px;margin:0;padding:0;text-align:center}
 /*!*****************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/footer/__copyright/footer__copyright.css ***!
   \*****************************************************************************************************************************************************************************/
