--- a/src/blocks/profile/__avatar-btn/profile__avatar-btn.css
+++ b/src/blocks/profile/__avatar-btn/profile__avatar-btn.css
@@ -1,4 +1,3 @@
-
 .profile__avatar-btn {
   margin-right: 30px;
   align-self: center;
@@ -25,7 +24,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-  opacity: 0.3;
   background-color: rgba(0,0,0,.8);
   background-image: url(../../../images/pencil-profile.svg);
   background-position: 50%;
@@ -43,24 +41,8 @@
 .profile__avatar-btn:hover:before {
   cursor:pointer;
   opacity: 1;
-  transition: opacity .3s linear
+  transition: opacity .3s linear;
   }
 
-  /* .cover__overlay {
-  display: flex;
-  text-decoration: none;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  box-sizing: border-box;
-  max-width: 100%;
-  position: relative;
-  color: #fff;
-  background-image: url(../../../images/background.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: 0;
-  min-height: 740px;
-} */
 
 
