--- a/main.css
+++ b/main.css
@@ -77,11 +77,11 @@
 /*!*******************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/element/__container/element__container.css ***!
   \*******************************************************************************************************************************************************************************/
-.element__container{background-color:#fff;border-radius:10px;height:361px;position:relative}
+.element__container{background-color:#000;border-radius:10px;display:flex;flex-direction:column;height:361px;margin:0;max-width:282px;overflow:hidden;padding:0;position:relative}
 /*!*********************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/element/__wrap/element__wrap.css ***!
   \*********************************************************************************************************************************************************************/
-.element__wrap{display:flex;justify-content:space-between}
+.element__wrap{align-items:center;background-color:#fff;display:flex;flex-direction:row;justify-content:space-between;margin:0}
 /*!*********************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/element/__icon/element__icon.css ***!
   \*********************************************************************************************************************************************************************/
@@ -129,7 +129,7 @@
 /*!*****************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__form-field/popup__form-field.css ***!
   \*****************************************************************************************************************************************************************************/
-.popup__form-field{display:flex;flex-direction:column;margin:54px auto 15px;width:358px}.popup__form-field:last-of-type{margin:0}@media screen and (max-width:599px){.popup__form-field{margin:75px auto 30px;max-width:238px}}
+.popup__form-field{display:flex;flex-direction:column;margin:33px auto 15px;width:358px}.popup__form-field:last-of-type{margin:0}@media screen and (max-width:599px){.popup__form-field{margin:75px auto 30px;max-width:238px}}
 /*!*********************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__edit-profile/popup__edit-profile.css ***!
   \*********************************************************************************************************************************************************************************/
@@ -157,7 +157,7 @@
 /*!*******************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__error/popup__error.css ***!
   \*******************************************************************************************************************************************************************/
-.popup__error{color:red;font-size:12px;line-height:1.25;min-height:6px}
+.popup__error{color:red;display:block;font-size:12px;height:18px;line-height:1.25;min-height:6px}
 /*!**************************************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__save-button/_disabled/popup__save-button_disabled.css ***!
   \**************************************************************************************************************************************************************************************************/
